Tue Mar 13 16:50:37 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_commponent.cpp(scan):

          Modified be_component::scan() to check the component's
          supported interfaces (if any). They will have no ports,
          but the presence of one or more read/write attributes
          will trigger the generation of the servant's set_attribute()
          method, which was incorrectly getting skipped if the component
          itself had no attributes. Thanks to Michael Frommberger
          <michael dot frommberger at gmx dot net> for reporting
          the problem.

Mon Mar 12 20:47:27 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/orbsvcs/CosNotification.mpc:
        * orbsvcs/orbsvcs/CosNotifyFilterExt.idl:

          Added an extension of the CosNotifyFilter::FilterFactory
          to allow removal of filter created by the factory.  The extension
          also has getters for existing filters and ids.

        * orbsvcs/orbsvcs/Notify/ETCL_FilterFactory.cpp:
        * orbsvcs/orbsvcs/Notify/ETCL_FilterFactory.h:

          Converted TAO_Notify_ETCL_FilterFactory to implement
          the extended FilterFactory type.

        * orbsvcs/tests/Notify/Basic/Basic.mpc:
        * orbsvcs/tests/Notify/Basic/ExtendedFilter.cpp:
        * orbsvcs/tests/Notify/Basic/ExtendedFilter.h:
        * orbsvcs/tests/Notify/Basic/run_test.pl:

          Test for the extended filterfactory methods.

Sun Mar 11 13:21:48 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Callback_Quoter/Notifier_i.h:
        * examples/Callback_Quoter/Notifier_i.cpp:
        * examples/Persistent_Grid/Grid_i.cpp:
        * examples/PluggableUDP/tests/SimplePerformance/client.cpp:
        * examples/Simple/bank/AccountManager_i.cpp:
          Coverity fixes

Thu Mar  8 16:12:46 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * tao/Valuetype/AbstractBase.cpp:
          Fixed reference counting problem.
